[gd_scene load_steps=7 format=3 uid="uid://414k1i406gnv"]

[ext_resource type="Script" uid="uid://dg74c6atjuwrk" path="res://area_2d.gd" id="1_bp1or"]
[ext_resource type="Texture2D" uid="uid://crk3xan03pohb" path="res://dungeon_rooms/chest_opened.png" id="2_trlyu"]
[ext_resource type="Texture2D" uid="uid://dr35e325gdflp" path="res://dungeon_rooms/chest_closed.png" id="3_x7mpe"]
[ext_resource type="Texture2D" uid="uid://c1eegbej0i6e4" path="res://dungeon_rooms/word_tall.png" id="4_trlyu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_udxuc"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trlyu"]
size = Vector2(44, 32)

[node name="Area2D" type="Area2D"]
scale = Vector2(0.5, 0.5)
collision_mask = 2
script = ExtResource("1_bp1or")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_udxuc")

[node name="opened_chest" type="Sprite2D" parent="."]
texture = ExtResource("2_trlyu")

[node name="closed_chest" type="Sprite2D" parent="."]
texture = ExtResource("3_x7mpe")

[node name="Grow" type="Area2D" parent="."]
position = Vector2(14, 12)
scale = Vector2(0.6, 0.6)

[node name="DropChest" type="Sprite2D" parent="Grow"]
light_mask = 3
position = Vector2(48, 20)
texture = ExtResource("4_trlyu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Grow"]
light_mask = 3
position = Vector2(48, 20)
shape = SubResource("RectangleShape2D_trlyu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Grow" to="." method="_on_grow_body_entered"]
